--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-torch==2.1.1
-torchvision==0.16.1
-transformers==4.37.0
-accelerate==0.25.0
-pillow==10.1.0
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-pydantic==2.5.0
+torch>=2.6.0
+torchvision>=0.17.0
+transformers>=4.37.0
+qwen-vl-utils
+pillow>=10.0.0
+opencv-python-headless>=4.8.0
+numpy>=1.24.0
+pydantic>=2.5.0
+accelerate
